Add multi-destination backup support with Backblaze B2
- Add Backblaze B2 as second backup destination alongside AWS S3
- Implement multi-destination storage manager with per-destination configuration
- Add folder policies with parent-child inheritance for destination selection
- Create per-folder/per-destination UI with checkbox selection in files.html
- Implement expanded state preservation when toggling destinations
- Fix rclone upload to use 'copyto' instead of 'copy' for correct file paths
- Update database schema to support multiple destinations per file
- Add folder_policies.py for managing destination inheritance logic
- Update dashboard and settings UI to show both AWS S3 and Backblaze B2
- Add comprehensive BACKBLAZE_B2_IMPLEMENTATION.md documentation

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ GOOGLE_REFRESH_TOKEN=your-refresh-token-here
 AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 
+# Backblaze B2 Credentials
+# Get these from Backblaze B2 console: https://secure.backblaze.com/b2_buckets.htm
+B2_APPLICATION_KEY_ID=your-b2-key-id
+B2_APPLICATION_KEY=your-b2-application-key
+
 # EU Provider Credentials (Scaleway)
 EU_PROVIDER_ACCESS_KEY=your-scaleway-access-key
 EU_PROVIDER_SECRET_KEY=your-scaleway-secret-key
