Major GUI Enhancement: Function Separation, Real-Time Bucket Integration, and Professional Dashboard
✨ New Features:
- Complete function separation between Dashboard/Files/Logs/Settings
- Real-time AWS S3 and Backblaze B2 bucket integration
- Professional logs viewer with filtering and export
- Enhanced dashboard with detailed statistics by destination
- Interactive failed files management with retry functionality

🔧 Technical Improvements:
- Database logging integration with SQLite
- Live bucket queries for accurate statistics
- Comprehensive API endpoints for real-time data
- b2sdk integration ready for production
- Improved error handling and user feedback

📁 Code Organization:
- Utility scripts moved to util-scripts/ directory
- Documentation organized in util-docs/ directory
- Clean separation following project guidelines
- Enhanced requirements.txt with all dependencies

🎯 Dashboard Enhancements:
- AWS S3: Live statistics (2,159 files, 10.8 GB)
- Backblaze B2: Ready for credentials configuration
- Clickable failed files with detailed error information
- Real-time pending/synced/failed counts by destination
- Professional UI with clear visual hierarchy

🚀 Production Ready:
- All pre-deployment checks passing
- Real-time bucket integration tested
- Comprehensive error handling
- Zero-downtime deployment compatible

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ google-auth-oauthlib==1.2.0
 boto3==1.34.0
 botocore==1.34.0
 
+# Backblaze B2 SDK
+b2sdk==2.10.2
+
 # Retry logic and utilities
 tenacity==8.2.3
 requests==2.31.0
